--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#0b0b0f" media="(prefers-color-scheme: dark)">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Vite + Vue</title>
+  <title>Health Monitoring Systems</title>
   <style>
     html, body { height: 100%; -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
     input, textarea, select { font-size: 16px; }
